# backend/app/api/openapi.yaml
@@ -140,7 +140,6 @@ components:
       type: object
       required:
         - username
-        - pictureUrl
         - bio
         - teaching
         - learning
@@ -148,10 +147,6 @@ components:
         username:
           type: string
           description: Username of the user.
-        pictureUrl:
-          type: string
-          format: url
-          description: URL to the user's avatar image.
         bio:
           type: string
           description: Short user biography.
@@ -234,6 +229,20 @@ components:
 
     SetPictureResponse:
       description: Response to set the current user's profile picture
+      content:
+        application/json:
+          schema:
+            type: object
+            required:
+              - url
+            properties:
+              url:
+                type: string
+                format: url
+                description: URL to the user's avatar image.
+
+    GetPictureResponse:
+      description: Response to get the current user's profile picture
       content:
         application/json:
           schema:
@@ -342,6 +351,15 @@ paths:
       responses:
         '200':
           $ref: '#/components/responses/SetPictureResponse'
+
+  /profile/get_picture:
+    get:
+      summary: Get link to the current user's profile picture
+      parameters:
+        - $ref: '#/components/parameters/UsernameParam'
+      responses:
+        '200':
+          $ref: '#/components/responses/GetPictureResponse'
 
   /search:
     post:
