# backend/app/internal/domain/models/user.go
@@ -12,7 +12,6 @@ type User struct {
 	Password   string             `json:"password"`
 	Email      string             `json:"email"`
 	Bio        string             `json:"bio"`
-	PictureUrl string             `json:"picture_url"`
 	Teaching   []string           `json:"teaching"`
 	Learning   []string           `json:"learning"`
 	CreatedAt  time.Time          `json:"created_at"`
